# cv-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: api.py  embeddings.py  extract_doc.py  prompts.py  schemas.py  server.py
backend/services/: __init__.py  claude.py  general.py  groq.py  groq_.py  open_ai.py
frontend/: app.py  extract_doc.py  main.py  schemas.py  setup.py  test.py  utils.py
