[tool.poetry]
name = "cv-analyzer"
version = "0.1.0"
description = "A tool for comparing your CV with job descriptions and providing explanations."
authors = ["Quan Hong TRAN <tranhongquan2106@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.13"
openai = "^1.98.0"
streamlit = "^1.47.1"
requests = "^2.32.4"
pymupdf = "^1.26.3"
streamlit-image-coordinates = "^0.3.1"
tiktoken = "^0.9.0"
groq = "^0.30.0"
pydantic = "^2.11.7"
anthropic = "^0.60.0"
uvicorn = "^0.35.0"
numpy = "2.2.6"
opencv-python = "^4.12.0.88"


########################################## BACKEND CONFIGURATION ##########################################
[backend.server]
port = 8000




